OO-4152: remove a lot of old TODO